clang/test/BSC/Negative/OwnedStruct/tag-name/tag-name.cbs
// RUN: %clang_cc1 -verify %s

owned struct A;

owned struct A {};
owned struct A a; // expected-error {{must ignore 'owned struct' tag before struct name}}
                  // expected-error@-1 {{type of global variable cannot qualified by 'owned'}}
struct B{
    owned struct A b;// expected-error {{must ignore 'owned struct' tag before struct name}}
};

owned struct C {
    owned struct A b; // expected-error {{must ignore 'owned struct' tag before struct name}}
};

owned struct A ff() { // expected-error {{must ignore 'owned struct' tag before struct name}}
    A b; // ok
    return b;
}

int owned struct A::f() { // expected-error {{must ignore 'owned struct' tag before struct name}}
    return 0;
}

int A::g(owned struct A* this) { // expected-error {{must ignore 'owned struct' tag before struct name}}
    return 0;
}

struct D;

owned struct D {};//// expected-error {{inconsistent tag before struct name}}

int main() {
    owned struct A b; // expected-error {{must ignore 'owned struct' tag before struct name}}
    owned struct B bb;
    return 0;
}